unpackaged/main/default/objects/Opportunity_Approval__c/Opportunity_Approval__c.object-meta.xml
<CustomObject>
    <label>Opportunity Approval</label>
    <nameField>
        <displayFormat>OA-{0000}</displayFormat>
        <label>Opportunity Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>