unpackaged/main/default/objects/Opportunity_Approval__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>