unpackaged/main/default/objects/Opportunity_Approval__c/fields/Approver_Department__c.field-meta.xml
<CustomField>
    <fullName>Approver_Department__c</fullName>
    <label>Approver Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>