unpackaged/main/default/objects/Opportunity_Approval__c/fields/Approver_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Approver_Subteam__c</fullName>
    <label>Approver Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>