unpackaged/main/default/objects/Opportunity_Approval__c/fields/Block_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Block_Closed_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Closed Won?</label>
    <type>Checkbox</type>
</CustomField>