unpackaged/main/default/objects/Opportunity_Approval__c/fields/Block_Deal_Desk_Approval__c.field-meta.xml
<CustomField>
    <fullName>Block_Deal_Desk_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Deal Desk Approval?</label>
    <type>Checkbox</type>
</CustomField>