unpackaged/main/default/objects/Opportunity_Approval__c/fields/Submitter_Department__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Department__c</fullName>
    <label>Submitter Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Department</valueSetName>
    </valueSet>
</CustomField>