unpackaged/main/default/objects/Opportunity_Approval__c/fields/Submitter_Level__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Level__c</fullName>
    <label>Submitter Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Level</valueSetName>
    </valueSet>
</CustomField>