unpackaged/main/default/objects/Opportunity_Approval__c/fields/Submitter_Role__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Role__c</fullName>
    <label>Submitter Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>