unpackaged/main/default/objects/Opportunity_Approval__c/fields/Submitter_Team__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Team__c</fullName>
    <label>Submitter Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>