unpackaged/main/default/objects/Opportunity_Approval__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below 18k ARR</fullName>
            </value>
            <value>
                <fullName>Below 25 users</fullName>
            </value>
            <value>
                <fullName>Platform fee under minimum</fullName>
            </value>
            <value>
                <fullName>Standard user price under minimum</fullName>
            </value>
            <value>
                <fullName>End user price under minimum</fullName>
            </value>
            <value>
                <fullName>Mobile-only user price under minimum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>